WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166400
WebAssembly: Fix decode floating point constants in unreachable code
https://bugs.webkit.org/show_bug.cgi?id=166400
Summary
WebAssembly: Fix decode floating point constants in unreachable code
Keith Miller
Reported
2016-12-21 17:11:15 PST
WebAssembly: Fix decode floating point constants in unreachable code
Attachments
Patch
(1.97 KB, patch)
2016-12-21 17:12 PST
,
Keith Miller
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-12-21 17:12:06 PST
Created
attachment 297635
[details]
Patch
JF Bastien
Comment 2
2016-12-21 17:15:45 PST
Comment on
attachment 297635
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=297635&action=review
lgtm
> Source/JavaScriptCore/ChangeLog:8 > + We decoded these as variable length but they should be fixed length.
Can you specify which test hits this? Does it now pass?
Saam Barati
Comment 3
2016-12-21 17:19:14 PST
Comment on
attachment 297635
[details]
Patch r=me Please unskip the spec tests that now pass.
Keith Miller
Comment 4
2016-12-21 17:26:54 PST
Committed
r210091
: <
http://trac.webkit.org/changeset/210091
>
Radar WebKit Bug Importer
Comment 5
2016-12-21 21:03:44 PST
<
rdar://problem/29782833
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug