WebAssembly: Fix decode floating point constants in unreachable code https://bugs.webkit.org/show_bug.cgi?id=166400

Reviewed by Saam Barati.

JSTests:

* wasm.yaml:

Source/JavaScriptCore:

We decoded these as variable length but they should be fixed length.

* wasm/WasmFunctionParser.h:

Canonical link: https://commits.webkit.org/183698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210091 268f45cc-cd09-0410-ab3c-d52691b4dbfc